client/src/App.css
#root, html{
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.App {
  width: 100%;
  height: 70vh;
  background: rgb(53, 53, 53);
  color: #ffffff;
  box-shadow: 0rem 5rem 10rem 15rem rgb(53, 53, 53);
  font-family: "Open Sans", sans-serif;
  text-align: center;
  display: grid;
  place-items: center;
}
body {
  margin: 0%;
  padding: 0%;
}
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");

.joinChatContainer {
  display: flex;
  flex-direction: column;
  padding: 2rem 2rem 5rem 2rem;
  border-radius: 2rem;
  background-color: #215c24;
  align-items: center;
  text-align: center;
}

.joinChatContainer h3 {
  background-color: #3a723e;
  padding: .5rem 2rem .5rem 2rem;
  border-radius: .5rem;
  font-size: 2.5rem;
  margin-bottom: 1rem;
}
.joinChatContainer input {
  width: 60%;
  height: 2rem;
  margin: .5rem;
  border: .2rem solid #43a047;
  border-radius: 1rem;
  color: rgb(109, 109, 109);
  padding: .5rem;
  font-size: 1.2rem;
  font-weight: 600;
}

.joinChatContainer button {
  width: 100%;
  height: 3.1rem;
  margin: .5rem;
  border: none;
  border-radius: 1rem;
  padding: .5rem;
  font-size: 1.2rem;
  background: #43a047;
  color: #fff;
  cursor: pointer;
}

.joinChatContainer button:hover {
  background: #2e7d32;
}

.chat-window {
  width: 35rem;
  height: 35rem;
  
}

.chat-window p {
  margin: 0;
}
.chat-window .chat-head {
  height: 3.3rem;
  border-radius: .5rem .5rem 0rem 0rem;
  outline: .3rem solid #2e7d32;
  background: #2e7d32;
  position: relative;
  cursor: pointer;
}
.chat-window .chat-head p {
  display: flex;
  font-family: sans-serif;;
  justify-content: center;
  background-color: #266829;
  font-size: 1.2rem;
  padding:.6rem;
  color: rgb(255, 255, 255);
  font-weight: 700;
  
}

.chat-window .chat-mid {
  height: 90%;
  border-radius: .5rem;
  outline: .25rem solid #2e7d32;
  background: #fff;
  position: relative;
}
.chat-window .chat-mid .message-container {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}

.chat-window .chat-mid .message-container::-webkit-scrollbar {
  display: none;
}
.chat-window .chat-mid .message {
  height: auto;
  padding: .6rem;
  display: flex;
}

.chat-window .chat-mid .message .message-content {
  width: auto;
  height: auto;
  min-height: 3.5rem;
  max-width: 20rem;
  background-color: #43a047;
  border-radius: .3rem;
  color: white;
  display: flex;
  align-items: center;
  margin-right: .3rem;
  margin-left: .3rem;
  padding-right: .4rem;
  padding-left: .4rem;
  overflow-wrap: break-word;
  word-break: break-word;
}

#you {
  justify-content: flex-start;
}

#you .message-content {
  justify-content: flex-start;
}

#you .message-meta {
  justify-content: flex-start;
  margin-left: 0.2rem;
  font-size: .9rem;
  color: rgb(46, 46, 46);
}

#other {
  justify-content: flex-end;
}

#other .message-content {
  justify-content: flex-end;
  background-color: cornflowerblue;
}

#other .message-meta {
  justify-content: flex-end;
  margin-right: 0.2rem;
  font-size: .9rem;
  color: rgb(46, 46, 46);
}

.message-meta #author {
  margin-left: .6rem;
  font-weight: bold;
}

.chat-window .chat-mid .message .message-meta {
  display: flex;
  font-size: 1.3rem;
}

.chat-window .chat-foot {
  height: 4rem;
  outline: .3rem solid #2e7d32;
  border-radius: .5rem;
  margin-top: 6rem;
  border-top: none;
  display: flex;
}

.chat-window .chat-foot input {
  height: 100%;
  flex: 85%;
  border: 0;
  padding: 0 0.7em;
  font-size: 1.3rem;
  font-weight: 600;
  color:rgb(109, 109, 109);
  outline: none;
  font-family: "Open Sans", sans-serif;
}

.chat-window .chat-foot button {
  border: 0;
  border-left: .25rem solid #2e7d32;
  display: grid;
  place-items: center;
  cursor: pointer;
  flex: 15%;
  height: 100%;
  background: transparent;
  outline: none;
  font-size: 1.4rem;
  color: lightgray;
  transition: all .3s ease-in-out; 
}

.chat-window .chat-foot button:hover {
  background-color: #2e7d32;
  transition: all .3s ease-in;
}
.hide {
  opacity: 0 !important;
}

